--- a/index.html
+++ b/index.html
@@ -896,7 +896,7 @@
             <img
               src="./assets/images/service1.png"
               alt="service1"
-              class="service-card-image absolute bottom-0 right-0 w-120 h-100 max-[768px]:hidden max-[1440px]:w-70 max-[1440px]:h-60 max-[1440px]:-right-15 max-[1024px]:-right-5 max-[1024px]:h-65"
+              class="service-card-image absolute bottom-0 right-0 w-120 h-100 max-[768px]:hidden max-[1440px]:w-70 max-[1440px]:h-60 max-[1440px]:-right-17 max-[1024px]:-right-10 max-[1024px]:h-60 max-[1024px]:w-75"
             />
             <img
               src="./assets/images/service1mobile.png"
@@ -948,7 +948,12 @@
             <img
               src="./assets/images/service3.png"
               alt="service1"
-              class="service-card-image absolute bottom-0 right-3 w-120 h-100 max-[1440px]:w-70 max-[768px]:hidden max-[768px]:right-0 max-[1440px]:h-60 max-[1024px]:right-11 max-[1024px]:bottom-2 max-[1024px]:w-60 max-[1024px]:h-50"
+              class="service-card-image absolute bottom-0 right-3 w-120 h-100 max-[1440px]:hidden max-[768px]:hidden max-[768px]:right-0 max-[1440px]:h-50 max-[1024px]:right-11 max-[1024px]:bottom-2 max-[1024px]:w-60 max-[1024px]:h-50"
+            />
+            <img
+              src="./assets/images/service3Tablet.png"
+              alt="service1"
+              class="service-card-image absolute bottom-0 hidden max-[768px]:hidden max-[1440px]:block right-3 max-[1024px]:right-8 max-[1024px]:w-61 max-[1024px]:h-55"
             />
             <img
               src="./assets/images/service3mobile.png"
@@ -974,13 +979,18 @@
             <img
               src="./assets/images/service4.png"
               alt="service1"
-              class="service-card-image absolute bottom-0 right-0 w-185 h-120 object-cover max-[768px]:w-[95%] max-[768px]:bottom-2 max-[768px]:h-40 max-[768px]:right-0 max-[1440px]:w-110 max-[1440px]:h-70 max-[1024px]:-right-10 max-[1024px]:h-50 max-[1024px]:bottom-5"
+              class="service-card-image absolute bottom-0 right-0 w-185 h-120 object-cover max-[768px]:hidden max-[768px]:h-40 max-[768px]:right-0 max-[1440px]:w-110 max-[1440px]:h-70 max-[1024px]:-right-4 max-[1024px]:h-50 max-[1024px]:bottom-2"
+            />
+            <img
+              src="./assets/images/service4mobile.png"
+              alt="service1"
+              class="service-card-image absolute bottom-0 right-0 hidden max-[768px]:block"
             />
           </a>
 
           <a
             href="/pages/road_transportation.html#partial"
-            class="service-card flex-1 basis-[calc(50%-0.375rem)] max-[1024px]:basis-full min-w-[300px] p-8 bg-white h-125 max-[768px]:h-60 max-[1440px]:h-80 radius_right radius_servie5 relative flex justify-between"
+            class="service-card flex-1 basis-[calc(50%-0.375rem)] overflow-hidden max-[1024px]:basis-full min-w-[300px] p-8 bg-white h-125 max-[768px]:h-60 max-[1440px]:h-80 radius_right radius_servie5 relative flex justify-between"
           >
             <p
               class="text-[2rem] text-[#3A3A3A] font-medium max-[1440px]:text-2xl max-[1440px]:leading-7 max-[768px]:text-lg max-[768px]:leading-6"
@@ -998,9 +1008,9 @@
               class="service-card-image absolute radius_right radius_servie5 bottom-0 right-0 w-195 h-130 object-cover max-[1440px]:w-90 max-[1440px]:h-70 max-[1024px]:hidden"
             />
             <img
-              src="./assets/images/service5.png"
+              src="./assets/images/service5Tablet.png"
               alt="service1"
-              class="service-card-image absolute bottom-0 min-[768px]:left-11 w-135 h-70 object-cover hidden max-[1024px]:block max-[768px]:w-75 max-[768px]:h-50 max-[768px]:right-0!"
+              class="service-card-image absolute bottom-0 min-[768px]:left-11 object-cover hidden max-[1024px]:block max-[768px]:w-75 max-[768px]:h-52 max-[768px]:-right-7!"
             />
           </a>
         </div>
